[project]
name = "sort-by-citations"
version = "0.0.1"
authors = [
  {name = "O957", email = "127630341+O957@users.noreply.github.com"},
]
description = "Streamlit application which uses the OpenAlex API (via pyalex) to find the top N academic resources by citation count for researcher or keyword searches."
license = "Apache-2.0"
readme = "README.md"
keywords = ["citations", "academia", "meta-science", "openalex", "streamlit", "python"]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "pyalex>=0.13",
    "polars>=0.20.0",
    "requests>=2.31.0",
]

[project.urls]
Repository = "https://github.com/O957/sort-by-citations"
Issues = "https://github.com/O957/sort-by-citations/issues"
"Author GitHub" = "https://github.com/O957"
Website = "https://sort-by-citations.streamlit.app/"

[tool.ruff.lint.mccabe]
max-complexity = 15
